--- a/USER/Template.uvprojx
+++ b/USER/Template.uvprojx
@@ -48,7 +48,7 @@
             <InvalidFlash>1</InvalidFlash>
           </TargetStatus>
           <OutputDirectory>..\OBJ\</OutputDirectory>
-          <OutputName>YCKJ-ACU Vc1.hex</OutputName>
+          <OutputName>YCKJ-ACU_CAN V02.hex</OutputName>
           <CreateExecutable>1</CreateExecutable>
           <CreateLib>0</CreateLib>
           <CreateHexFile>1</CreateHexFile>
